--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-spring": "^8.0.27",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "typeface-raleway": "0.0.75",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
